# semsystem

./: Cargo.toml  config.bat  readme.md  run.bat
doc/: todo.md
json/: Item.json  Test.json
note/: code_-_2024-02-23.md  note_-_2024_02_20.md
sql/: function.mysql.sql  howto.md  new-db-mydb.mysql.sql  new-db.mysql.sql  new-semantic-system-db.mysql.sql  new-user.mysql.sql  select-assoc.mysql.sql  semantic-system.mwb  semantic-system.mwb.bak  set-mock-assoc.mysql.sql  set-mock-rows.mysql.sql  storefn-levenshtein.mysql.sql  storefn-levenshtein_ratio.mysql.sql  trigger.mysql.sql
sql/__OLD/2024-02-10/: new-semantic-system-db.mysql.sql
sql/__OLD/2025-03-03/: new-db.mysql.sql
src/: app.rs  main.rs  mydb.rs  myquery.rs
src/mydb/: get.rs
