[package]
name = "sem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.34"
futures = "0.3.30"
regex = "1.10.3"
serde = "1.0.196"
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = [ "mysql", "runtime-tokio-native-tls", "chrono" ] }
sqlx-core = "0.7.3"
sqlx-mysql = "0.7.3"
tokio = { version = "1.36.0", features = ["rt", "macros"] }
tokio-test = "0.4.3"
